Z-index fix

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,7 +9,7 @@
 .background {
   height: 100vh;
   width: 100vw;
-  position: fixed;
+  position: absolute;
   z-index: -1;
   background-repeat: no-repeat;
   object-fit: cover;
@@ -18,7 +18,7 @@
 main {
   width: 100vw;
   height: 100vh;
-  position: fixed;
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: center;
